Infra Data Tabelle hinzugefügt /Migrations  und Update von MVC für die neue SheDBContext (EF)

--- a/SheClean/SheClean.MVC/appsettings.json
+++ b/SheClean/SheClean.MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SheIdentityDBConnection": "Server=NB-SYNIOS20\\SQLEXPRESS;Database=SheIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SheIdentityDBConnection": "Server=NB-SYNIOS20\\SQLEXPRESS;Database=SheIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SheDBConnection": "Server=NB-SYNIOS20\\SQLEXPRESS;Database=SheDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
