Konfiguration in Presentation Layer Dependency Container

--- a/SheClean/SheClean.MVC/SheClean.MVC.csproj
+++ b/SheClean/SheClean.MVC/SheClean.MVC.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SheClean.Infra.Data\SheClean.Infra.Data.csproj" />
+    <ProjectReference Include="..\SheClean.Infra.IoC\SheClean.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
